# stdexec

./: .clang-format  .clang-tidy  .clangd  .git-blame-ignore-revs  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  MAINTAINERS.md  Makefile  P2300R0.html  P2300R1.html  P2300R2.html  P2300R4.html  P2300R5.html  P2532R0.html  README.md  conanfile.py  executors.bs  executors.html  hiding.md  meson.build  p2300.bs  p2300.html  receiver_redesign.bs  receiver_redesign.html  sanitizer-ignorelist.txt  std_execution.bs  std_execution.html
docs/: CMakeLists.txt  CONTRIBUTING-docs.md  Doxyfile  Doxyfile.in  conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree  senders_guide.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  senders_guide.html
docs/source/: conf.py  index.rst
docs/source/developer/: index.rst
docs/source/reference/: index.rst
docs/source/user/: index.rst
docs/xml/: conf_8py.xml  index.xml  namespaceconf.xml
examples/: CMakeLists.txt  Makefile  _clangd_helper_file.cpp  hello_coro.cpp  hello_world.cpp  inline_scheduler.hpp  io_uring.cpp  problem.cpp  retry.cpp  scope.cpp  sequence.cpp  sticky_task.cpp  sudoku.cpp  task.hpp  then.cpp
examples/algorithms/: retry.hpp  then.hpp
examples/asioexec/: echo_server.cpp
examples/benchmark/: asio_thread_pool.cpp  boost_thread_pool.cpp  common.hpp  fibonacci.cpp  static_thread_pool.cpp  static_thread_pool_bulk_enqueue.cpp  static_thread_pool_bulk_enqueue_nested.cpp  static_thread_pool_nested.cpp  static_thread_pool_nested_old.cpp  static_thread_pool_old.cpp  static_thread_pool_old.hpp  taskflow_thread_pool.cpp  tbb_thread_pool.cpp  tbb_thread_pool_nested.cpp
examples/cuda/: .clang-format  CMakeLists.txt  README.md
examples/cuda/examples/: _clangd_helper_file.cpp  bulk.cpp  maxwell.cpp  reduce.cpp
examples/cuda/schedulers/: distributed_scheduler.hpp  graph_scheduler.hpp  stream.cuh
examples/cuda/test/: bulk.cpp  common.cuh  let_error.cpp  let_stopped.cpp  let_value.cpp  split.cpp  start_detached.cpp  storage.cpp  test_helpers.hpp  test_main.cpp  then.cpp  then_war.cpp  transfer.cpp  tuple.cpp  upon_error.cpp  upon_stopped.cpp  variant.cpp  when_all.cpp
examples/detail/: intrusive_queue.hpp
examples/nvexec/: CMakeLists.txt  _clangd_helper_file.cpp  a.memory.trace.pbf  bulk.cpp  bulk.cu  launch.cpp  launch.cu  maxwell.cpp  maxwell_cpu_mt.cpp  maxwell_cpu_mt.cu  maxwell_cpu_st.cpp  maxwell_cpu_st.cu  maxwell_distributed.cpp  maxwell_distributed.cu  maxwell_gpu_m.cpp  maxwell_gpu_m.cu  maxwell_gpu_s.cpp  maxwell_gpu_s.cu  nvtx.cpp  nvtx.cu  problem.cpp  reduce.cpp  reduce.cu  split.cpp  split.cu
examples/nvexec/maxwell/: common.cuh  cpp.cuh  cuda.cuh  snr.cuh  std.cuh  stdpar.cuh
examples/schedulers/: inline_scheduler.hpp  manual_event_loop.hpp  openmp_scheduler.hpp  single_thread_context.hpp  static_thread_pool.hpp
examples/server_theme/: .clang-format  .gitignore  let_value.cpp  on_transfer.cpp  split_bulk.cpp  then_upon.cpp
test/: CMakeLists.txt  test_include.cpp  test_main.cpp  test_scratch.cpp  test_system_context_replaceability.cpp
test/algos/adaptors/: test_bulk.cpp  test_done_as_error.cpp  test_done_as_optional.cpp  test_ensure_started.cpp  test_into_variant.cpp  test_let_done.cpp  test_let_error.cpp  test_let_stopped.cpp  test_let_value.cpp  test_on.cpp  (+11 more)
test/asioexec/: CMakeLists.txt  test_completion_token.cpp  test_use_nothrow_sender.cpp  test_use_sender.cpp  test_use_sender_with_cancellation.cpp
test/async_scope/: test_dtor.cpp  test_empty.cpp  test_spawn.cpp  test_spawn_future.cpp  test_stop.cpp
test/concepts/: test_awaitables.cpp  test_concept_operation_state.cpp  test_concept_scheduler.cpp  test_concepts_receiver.cpp  test_concepts_sender.cpp
test/cpos/: cpo_helpers.cuh  test_cpo_bulk.cpp  test_cpo_connect.cpp  test_cpo_ensure_started.cpp  test_cpo_receiver.cpp  test_cpo_schedule.cpp  test_cpo_split.cpp  test_cpo_start.cpp  test_cpo_upon_error.cpp  test_cpo_upon_stopped.cpp
test/detail/: test_completion_signatures.cpp  test_create.cpp  test_utility.cpp
test/exec/: CMakeLists.txt  test_any_sender.cpp  test_at_coroutine_exit.cpp  test_bwos_lifo_queue.cpp  test_completion_signatures.cpp  test_cpo_ensure_started.cpp  test_cpo_split.cpp  test_create.cpp  test_ensure_started.cpp  test_enter_scope_sender.cpp  test_enter_scopes.cpp  test_env.cpp  test_execute.cpp  test_exit_scope_sender.cpp  test_finally.cpp  test_fork.cpp  test_fork_join.cpp  test_frame_allocator.cpp  test_function.cpp  test_ignore_all.cpp  test_into_tuple.cpp  test_invoke.cpp  test_io_uring_context.cpp  test_iotas.cpp  test_just_from.cpp  test_libdispatch.cpp  test_lifetime.cpp  test_matching_completion_signature.cpp  test_materialize.cpp  test_memory_resource_adaptor.cpp  test_nest_scopes.cpp  test_object.cpp  test_on.cpp  test_on2.cpp  test_on3.cpp  test_reduce.cpp  test_repeat_effect_until.cpp  test_repeat_effect_until_fail.cpp  test_repeat_n.cpp  test_repeat_n_fail.cpp  (+24 more)
test/execpools/: test_asio_thread_pool.cpp  test_boost_thread_pool.cpp  test_taskflow_thread_pool.cpp  test_tbb_thread_pool.cpp
test/nvexec/: CMakeLists.txt  bulk.cpp  common.cuh  continues_on.cpp  ensure_started.cpp  launch.cpp  let_error.cpp  let_stopped.cpp  let_value.cpp  monotonic_buffer.cpp  reduce.cpp  split.cpp  start_detached.cpp  synchronized_pool.cpp  then.cpp  then_war.cpp  tracer_resource.h  transfer.cpp  transfer_when_all.cpp  tuple.cpp  upon_error.cpp  upon_stopped.cpp  variant.cpp  when_all.cpp  when_all_fail.cpp  when_all_war.cpp
test/queries/: test_env.cpp  test_get_forward_progress_guarantee.cpp
test/rrd/: CMakeLists.txt  Makefile  README.md  async_scope.cpp  bwos_lifo_queue.cpp  intrusive_mpsc_queue.cpp  shared_mutex  split.cpp  stdexec_relacy.hpp  sync_wait.cpp
test/tbbexec/: test_tbb_thread_pool.cpp
test/test_common/: allocators.hpp  receivers.hpp  require_terminate.hpp  retry.hpp  schedulers.hpp  scope_helpers.hpp  scope_tokens.hpp  senders.hpp  sequences.hpp  tuple.hpp  type_helpers.hpp
test/types/: test_type_async_scope.cpp
(+2940 files in other folders)
